tests/rosetta/out/Smalltalk/md5.out
/tmp/md5.st:5: parse error, expected ']'
