tests/rosetta/out/Smalltalk/md5.st
" Generated by Mochi compiler v0.10.30 on 2025-07-18T17:36:07Z
"
| testpkg pair sum |
testpkg := Dictionary from:{'Add'->[:a :b | a + b]. 'Pi'->3.14e0. 'Answer'->42}.
{{'d41d8cd98f00b204e9800998ecf8427e'. ''}. {'0cc175b9c0f1b6a831c399e269772661'. 'a'}. {'900150983cd24fb0d6963f7d28e17f72'. 'abc'}. {'f96b697d7cb7938d525a2f31aaf161d0'. 'message digest'}. {'c3fcd3d76192e4007dfb496cca67e13b'. 'abcdefghijklmnopqrstuvwxyz'}. {'d174ab98d277d9f5a5611c2c9f419d9f'. 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789'}. {'57edf4a22be3c955ac49da2e2107b67a'. ('12345678901234567890' + '123456789012345678901234567890123456789012345678901234567890')}. {'e38ca1d920c4b8b8d3946b2c72f01680'. 'The quick brown fox jumped over the lazy dog''s back'}} do: [:pair |.
sum := (testpkg at: 'MD5Hex') value: (pair at: 1).
((sum ~= (pair at: 0))) ifTrue: [
Transcript show: 'MD5 fail'; cr.
Transcript show: '  for string,'; show: ' '; show: (pair at: 1) printString; cr.
Transcript show: '  expected:  '; show: ' '; show: (pair at: 0) printString; cr.
Transcript show: '  got:       '; show: ' '; show: (sum) printString; cr.
] .
].
.
